sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:5: error: not found: value cond
  cond=false
  ^AlgCocktailSort1:8: error: not found: value cond
      echange(i,i+1);cond=true}}
                     ^AlgCocktailSort1:11: error: not found: value cond
      echange(i,i+1);cond=true
                     ^AlgCocktailSort1:14: error: not found: value cond
}while (cond)} 
        ^